@@ -1,6 +1,7 @@
 Cacti CHANGELOG
 
 1.2.23
+-issue#4888: Cacti audit_database.php script fails on MySQL 8.0.29 and likely will on newer versions
 -issue#4889: Increase host query performance by removing check for NULL after 1.2.22
 -issue#4892: Recache Loop after many devices go offline
 -issue#4893: in cacti 1.2.22 real time counter gets stuck and does not count down
